# spidery

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SELF_HOST.md  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  self_host_issue.md
.github/archive/: js-sdk.yml  publish-js-sdk.yml  publish-python-sdk.yml  python-sdk.yml
.github/scripts/: check_version_has_incremented.py
.github/workflows/: clean-before-24h-complete-jobs.yml  deploy-image-staging.yml  deploy-image.yml
apps/api/: fly.staging.toml  fly.toml  openapi-v0.json  openapi.json  package.json  pnpm-lock.yaml  requests.http  v1-openapi.json
apps/api/src/: index.ts  types.ts  (+3 more)
apps/js-sdk/: example.js  example.ts  package-lock.json  package.json
apps/playwright-service-ts/: README.md
apps/python-sdk/: README.md  example.py  pyproject.toml  setup.py
apps/python-sdk/spidery/__tests__/e2e_withAuth/: .env.example
apps/python-sdk/spidery_py.egg-info/: SOURCES.txt  top_level.txt
apps/redis/: fly.toml
apps/rust-sdk/: CHANGELOG.md  Cargo.toml  README.md
apps/rust-sdk/examples/: example.rs
apps/rust-sdk/src/: crawl.rs  document.rs  error.rs  lib.rs  map.rs  scrape.rs
apps/rust-sdk/tests/: e2e_with_auth.rs
apps/test-suite/: README.md  load-test.yml  pnpm-lock.yaml
examples/R1_web_crawler/: R1_web_crawler.py
examples/claude_stock_analyzer/: claude_stock_analyzer.py
examples/contradiction_testing/: web-data-contradiction-testing-using-llms.mdx
examples/crm_lead_enrichment/: crm_lead_enrichment.py
examples/find_internal_link_opportunites/: find_internal_link_opportunites.ipynb
examples/full_example_apps/: README.md
examples/grok_web_crawler/: grok_web_crawler.py
examples/hacker_news_scraper/: requirements.txt  spidery_scraper.py
examples/haiku_web_crawler/: haiku_web_crawler.py
examples/internal_link_assistant/: internal_link_assistant.py
examples/o1_job_recommender/: o1_job_recommender.py
examples/o1_web_crawler/: o1_web_crawler.py
examples/o1_web_extractor/: o1_web_extractor.py
examples/openai-realtime-spidery/: README.md
examples/openai_swarm_spidery/: .env.example  README.md  main.py  requirements.txt
examples/openai_swarm_spidery_web_extractor/: .env.example  main.py  requirements.txt
examples/sales_web_crawler/: .env.example  app.py
examples/scrape_and_analyze_airbnb_data_e2b/: .env.template  README.md  package-lock.json  package.json  scraping.ts
examples/simple_web_data_extraction_with_claude/: simple_web_data_extraction_with_claude.ipynb
examples/sonnet_web_crawler/: sonnet_web_crawler.py
examples/turning_docs_into_api_specs/: turning_docs_into_api_specs.py
examples/visualize_website_topics_e2b/: claude-visualize-website-topics.ipynb
examples/web_data_extraction/: web-data-extraction-using-llms.mdx
examples/web_data_rag_with_llama3/: web-data-rag--with-llama3.mdx
(+116 files in other folders)
