[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "spidery-py"
description = "Python SDK for Spidery API"
readme = {file="README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dotenv",
    "websockets",
    "nest-asyncio",
    "pydantic>=2.10.3",
]
authors = [{name = "Khulnasoft.com",email = "nick@khulnasoft.com"}]
maintainers = [{name = "Khulnasoft.com",email = "nick@khulnasoft.com"}]
license = {text = "GNU Affero General Public License v3 (AGPLv3)"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
]

keywords = ["SDK", "API", "spidery"]

[project.urls]
"Documentation" = "https://docs.spidery.khulnasoft.com"
"Source" = "https://github.com/khulnasoft/spidery"
"Tracker" = "https://github.com/khulnasoft/spidery/issues"

[tool.setuptools.packages.find]
where = ["."]
